# data-quality-lineage-pipeline

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/source/: customers.csv  orders.csv
src/quality_lineage/: __init__.py  cli.py  pipeline.py
tests/: test_pipeline.py
